<resources>
    <string name="app_name">Organic Store</string>
    <string name="the_organic_store">The Organic Store</string>
    <string name="welcome_to_our">Welcome to our</string>
    <string name="organic_store">Organic Store</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="login">Login</string>
    <string name="forget_password">Forget Password?</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign up</string>
    <string name="gmail_com">example.example@gmail.com</string>
    <string name="login_with_email">Login with Email</string>
    <string name="create_an_account">Create an account</string>
    <string name="continue_with_email">Continue with Email</string>
    <string name="sign_up">Sign up</string>
    <string name="jon_dorman">Jon Dorman</string>
    <string name="pass_steric">*********</string>
    <string name="already_have_account_login">Already Have Account? Login</string>
    <string name="product_image">Product Image</string>
    <string name="submit_button">Submit Button</string>
    <string name="home">Home</string>
    <string name="menu">Menu</string>
    <string name="profile">Profile</string>
    <string name="save">Save</string>
    <string name="store_icon">Store Icon</string>
    <string name="bundle_pack">Bundle Pack</string>
    <string name="onion_oil_salt">Onion, Oil, Salt...</string>
    <string name="_35">\$35</string>
    <string name="_50_32">\$50.32</string>
    <string name="add_button_icon">Add button icon</string>
    <string name="menu_icon">Menu Icon</string>
    <string name="current_location">Current Location </string>
    <string name="search_icon">Search Icon</string>
    <string name="chhata_syhlet">Chhata,Syhlet</string>
    <string name="google_map">Google Map</string>
    <string name="order_location_daily_groceries">Order Location\nDaily Groceries</string>
    <string name="free_delivery">#Free Delivery</string>
    <string name="popular_pack">Popular Pack</string>
    <string name="view_all">View All</string>
    <string name="product_details_description">LoremLoremLoremLoremLoremLoremLorem\nLoremLoremLoremLoremLoremLoremLorem</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>