<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="160dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="16dp"
    android:background="@drawable/rv_item_border"
    android:padding="15dp">

    <ImageView
        android:id="@+id/iv_bundle_pack"
        android:layout_width="100dp"
        android:layout_height="120dp"
        android:layout_marginTop="6dp"
        android:contentDescription="@string/product_image"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_bundle_pack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/manrope"
        android:singleLine="true"
        android:text="@string/bundle_pack"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_bundle_pack" />

    <TextView
        android:id="@+id/tv_pack_ingredients"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp"
        android:fontFamily="@font/manrope_variable_font_wght"
        android:singleLine="true"
        android:text="@string/onion_oil_salt"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_bundle_pack" />

    <TextView
        android:id="@+id/tv_pack_offer_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/manrope"
        android:text="@string/_35"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/iv_increase_quantity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/iv_increase_quantity" />

    <TextView
        android:id="@+id/tv_pack_regular_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:fontFamily="@font/manrope_variable_font_wght"
        android:text="36"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/iv_increase_quantity"
        app:layout_constraintStart_toEndOf="@id/tv_pack_offer_price"
        app:layout_constraintTop_toTopOf="@id/iv_increase_quantity" />

    <ImageView
        android:id="@+id/iv_increase_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="@drawable/ic_add"
        android:contentDescription="@string/add_button_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_pack_ingredients" />

    <TextView
        android:id="@+id/tv_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:fontFamily="@font/manrope_variable_font_wght"
        android:text="0"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/iv_increase_quantity"
        app:layout_constraintEnd_toStartOf="@id/iv_increase_quantity"
        app:layout_constraintTop_toTopOf="@+id/iv_increase_quantity" />

    <ImageView
        android:id="@+id/iv_decrease_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:src="@drawable/ic_decrease_quantity"
        app:layout_constraintBottom_toBottomOf="@id/iv_increase_quantity"
        app:layout_constraintEnd_toStartOf="@id/tv_quantity"
        app:layout_constraintTop_toTopOf="@id/iv_increase_quantity" />

    <ImageView
        android:id="@+id/iv_save"
        android:layout_width="18dp"
        android:layout_height="40dp"
        android:layout_marginTop="-10dp"
        android:src="@drawable/ic_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>